cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 11)
project(PROJECT1)
set(PCL_DIR "/root/pcl-pcl-1.9.1/build")
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(proj1 proj1.cpp)
target_link_libraries(proj1 ${PCL_LIBRARIES})
